<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical"
    android:background="@color/top_strip" >
    
        <TextView
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="15dip"
        android:textStyle="bold"
        android:text="@string/app_name" />
        
    </RelativeLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >
  
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/user_login"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
    </RelativeLayout>
   <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center" >
 	    
 		<EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edittext_bg"
        android:padding="10dp"
        android:text="vbommaraju@osius.com"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/header"
        />    
        
 		<EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:password="true"
        android:text="VB$123"
        android:background="@drawable/edittext_bg"
        android:padding="10dp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/userName"
        />  
        
 		<Button
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_forgot_btn"
        android:textColor="@color/white"
        android:background="@color/darkred"
        android:padding="10dp"
        android:textSize="15dip"
        android:textStyle="bold"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"
        /> 
        
 		<Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/user_login_btn"
        android:textColor="@color/white"
        android:background="@color/leaf_green"
        android:padding="10dp"
        android:textSize="15dip"
        android:textStyle="bold"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"
        android:layout_toRightOf="@+id/forgotpassword"
        /> 
 		
</RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:background="@color/top_strip" >
   
    <TextView
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="15dip"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/website" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/icon"
      />
 </RelativeLayout>
</RelativeLayout>