<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/top_strip"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:src="@drawable/home" />
        
         
         <ImageView
            android:id="@+id/logout"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:src="@drawable/logout" />
            
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/requisitions_leave"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

        <LinearLayout
            	android:id="@+id/first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_fromdate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_fromdate"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_fromdate_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/requisitions_date_sample"
                    android:padding="10dp"
                    android:textColor="@color/white"
                     android:textSize="15dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
            
         <LinearLayout
            	android:id="@+id/second_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_row"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_todate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_todate"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_todate_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/requisitions_date_sample"
                    android:padding="10dp"
                    android:textColor="@color/white"
                     android:textSize="15dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
            
         <LinearLayout
            	android:id="@+id/third_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/second_row"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_totalworkdingdays_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_totalworkdingdays"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_totalworkdingdays_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/leave_number"
                    android:padding="10dp"
                    android:textColor="@color/white"
 					android:textSize="17dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
            
         <LinearLayout
            	android:id="@+id/fourth_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/third_row"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_totalworkhours_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_totalworkhours"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_totalworkhours_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/leave_number"
                    android:padding="10dp"
                    android:textColor="@color/white"
 					android:textSize="17dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
            
         
         <LinearLayout
            	android:id="@+id/fifth_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fourth_row"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_reason_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_reason"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_reason_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/leave_number"
                    android:padding="10dp"
                    android:textColor="@color/white"
 					android:textSize="17dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
            
         <LinearLayout
            	android:id="@+id/sixth_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fifth_row"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_approver_comments_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_approver_comments"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_approver_comments_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/leave_number"
                    android:padding="10dp"
                    android:textColor="@color/white"
 					android:textSize="17dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
            
          <LinearLayout
            	android:id="@+id/seventh_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sixth_row"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/requisitions_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:background="@drawable/labeltext_bg"
                    android:text="@string/requisitions_status"
                    android:padding="10dp"
                    android:textSize="18dip"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/requisitions_status_sample_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right"
                    android:hint="@string/leave_reason"
                    android:padding="10dp"
                    android:textColor="@color/white"
 					android:textSize="17dip"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"/>
            </LinearLayout>
        
        </RelativeLayout>
        
    </ScrollView>
   
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/top_strip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon" />
    </RelativeLayout>

</RelativeLayout>