<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/top_strip"
        android:orientation="vertical" >
  
        <ImageView
            android:id="@+id/logout"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:src="@drawable/logout" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
    </RelativeLayout>

	<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >
  
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/mainmenu"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true" >
        
       
        
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >
            
            <ImageView
            android:id="@+id/emp_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/emp" />
            
            <ImageView
            android:id="@+id/emp_apply_leave"
            android:layout_toRightOf="@+id/emp_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/leave" />
            
            <ImageView
            android:id="@+id/emp_requisitions_leave"
            android:layout_below="@+id/emp_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/requisition" />
            
            <ImageView
            android:id="@+id/emp_leave_summary"
            android:layout_below="@+id/emp_apply_leave"
            android:layout_toRightOf="@+id/emp_requisitions_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/summary" />
        </RelativeLayout>
		
    </ScrollView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/top_strip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon" />
    </RelativeLayout>

</RelativeLayout>